<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".activities.DettagliProdottoActivity">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="HotSlice"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.296" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="234dp"
            android:layout_height="186dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="60dp"
            android:src="@drawable/pizzalogin"
            app:layout_constraintBottom_toTopOf="@+id/etEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edittext_border"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            app:layout_constraintBottom_toTopOf="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edittext_border"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="12dp"
            app:layout_constraintBottom_toTopOf="@+id/etConfermaPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etConfermaPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edittext_border"
            android:hint="Conferma Password"
            android:inputType="textPassword"
            android:padding="12dp"
            app:layout_constraintBottom_toTopOf="@+id/btnRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/custom_button"
            android:text="Registrati"
            app:layout_constraintBottom_toTopOf="@+id/AlreadyRegisteredText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/AlreadyRegisteredText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="Sei già registrato? Vai al login"

            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Layout per avviso di mancanza di connessione Internet -->
    <RelativeLayout
        android:id="@+id/layoutNoInternet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/grey"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageNoInternet"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/textNoInternet"
            android:layout_marginBottom="16dp"
            android:src="@drawable/baseline_signal_wifi_connected_no_internet_4_24"
            app:tint="@color/red" />

        <TextView
            android:id="@+id/textNoInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Nessuna connessione Internet\nconnettersi e riprovare"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </RelativeLayout>

</FrameLayout>