<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/bottom_home"
        android:icon="@drawable/baseline_home_24"
        android:title="Home"/>
    <item
        android:id="@+id/bottom_statistiche"
        android:icon="@drawable/baseline_bar_chart_24"
        android:title="Best Sellers"/>

</menu>